Adjust look and feel of app, especially start screen.

--- a/client/www/css/app.css
+++ b/client/www/css/app.css
@@ -202,8 +202,8 @@ h1, h2, h3, h4, h5, h6 {
 .textBox {
 	background-color: rgba(255, 255, 255, 0.8);
 	
-	border: solid 1px #797C76;
-	border-radius: 10px;
+	/* border: solid 1px #797C76;
+	border-radius: 10px; */
 	
 	padding: 25px;
 	height: 32px;
