--- a/client/www/screens/distro/list/list.css
+++ b/client/www/screens/distro/list/list.css
@@ -45,6 +45,17 @@
 	background-color: #1695A3;
 }
 
+.studentInfoPanel .noneSelected {
+	text-align: center;
+	margin-top: 500px;
+	margin-left: 140px;
+	margin-right: 140px;
+	
+	font-family: $BOLD;
+	font-size: 32px;
+	color: white;
+}
+
 .statusBar {
 	position: absolute;
 	left: 0px;
