--- a/client/www/screens/distro/list/list.css
+++ b/client/www/screens/distro/list/list.css
@@ -1,4 +1,4 @@
-.searchBar {
+$SCREEN .searchBar {
 	position: absolute;
 	left: 0px;
 	right: 0px;
@@ -11,7 +11,7 @@
 	background-color: #225378;
 }
 
-.studentList {
+$SCREEN .studentList {
 	position: absolute;
 	left: 0px;
 	width: 1250px;
@@ -21,14 +21,14 @@
 	background-color: #F3FFE2;
 }
 
-.studentName {
+$SCREEN .studentName {
 	font-family: $BOLD;
 	font-size: 64px;
 	color: white;
 	margin: 0px;
 }
 
-.sigPreview {
+$SCREEN .sigPreview {
 	width: 738px;
 	height: 460px;
 	background-image: url("$ASSETS/test-sig.png");
@@ -39,25 +39,29 @@
 	margin-top: 20px;
 }
 
-.stats {
+$SCREEN .notSigned .sigPreview {
+	background-image: url("$ASSETS/not-collected.png") !important;
+}
+
+$SCREEN .stats {
 	margin: 0px;
 	font-size: 34px;
 	color: white;
 }
 
-.studentList .students li {
+$SCREEN .studentList .students li {
 	padding: 16px;
 	border-bottom: solid 2px #225378;
 	font-family: $NORMAL;
 	font-size: 44px;
 }
 
-.studentList .students li.selected {
+$SCREEN .studentList .students li.selected {
 	color: white;
 	background-color: #1695A3;
 }
 
-.studentInfoPanel {
+$SCREEN .studentInfoPanel {
 	position: absolute;
 	left: 1250px;
 	right: 0px;
@@ -71,7 +75,7 @@
 	background-color: #1695A3;
 }
 
-.studentInfoPanel .noneSelected {
+$SCREEN .studentInfoPanel .noneSelected {
 	text-align: center;
 	margin-top: 500px;
 	margin-left: 140px;
@@ -82,7 +86,7 @@
 	color: white;
 }
 
-.statusBar {
+$SCREEN .statusBar {
 	position: absolute;
 	left: 0px;
 	right: 0px;
@@ -98,7 +102,7 @@
 	color: white;
 }
 
-.statusBar .logout {
+$SCREEN .statusBar .logout {
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
@@ -110,4 +114,47 @@
 	
 	font-family: $BOLD;
 	font-size: 32px;
+}
+
+$SCREEN .notSigned .voidPickup {
+	display: none;
+}
+
+$SCREEN .voidPickup {
+	padding-top: 40px;
+	padding-bottom: 40px;
+	background-color: #225378;
+	text-align: center;
+	
+	width: 738px;
+	
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+	
+	color: white;
+	font-size: 44px;
+	font-family: $BOLD;
+}
+
+$SCREEN .notSigned .pickup {
+	display: block !important;
+}
+
+$SCREEN .pickup {
+	display: none;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	background-color: lime;
+	text-align: center;
+	
+	width: 738px;
+	
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 30px;
+	
+	color: white;
+	font-size: 80px;
+	font-family: $BOLD;
 }
