--- a/client/www/css/app.css
+++ b/client/www/css/app.css
@@ -215,6 +215,10 @@ h1, h2, h3, h4, h5, h6 {
 	border-radius: 4px;
 }
 
+.textBox ::-webkit-input-placeholder {
+	font-style: italic;
+}
+
 .textBox label {
 	font-family: "HelveticaNeue-Bold";
 	text-transform: capitalize;
