--- a/client/www/screens/distro/sign/sign.css
+++ b/client/www/screens/distro/sign/sign.css
@@ -1,5 +1,6 @@
 $SCREEN {
-	background-color: #F3FFE2;
+	background-color: #505151;
+	color: white;
 	padding-top: 20px;
 }
 
@@ -8,10 +9,10 @@ $SCREEN h1 {
 	text-align: center;
 	font-size: 100px;
 	margin: 30px 100px;
+	color: #CCEEF8;
 }
 
 $SCREEN p {
-	color: black;
 	text-align: center;
 	margin: 50px 100px;
 	font-size: 40px;
@@ -25,8 +26,10 @@ $SCREEN .signContainer {
 }
 
 $SCREEN .signArea {
-	width: 1600px;
-	height: 800px;
+	width: 1592px;
+	height: 792px;
+	border: 4px solid black;
+	border-radius: 4px;
 	
 	margin-bottom: 20px;
 	
@@ -45,12 +48,18 @@ $SCREEN .signOK {
 	background-color: red;
 	margin-right: 20px;
 	color: white;
+	border: 4px solid #90DE68;
+	background-color: #74C93E;
+	border-radius: 4px;
 	
-	width: 960px;
+	width: 952px;
 }
 
 $SCREEN .signClear {
-	background-color: green;
 	color: white;
-	width: 540px;
+	width: 532px;
+	background-color: #D95B1F;
+	text-align: center;
+	border: 4px solid #F1793F;
+	border-radius: 4px;
 }
