--- a/client/www/screens/distro/sign/sign.css
+++ b/client/www/screens/distro/sign/sign.css
@@ -9,13 +9,16 @@ $SCREEN h1 {
 	text-align: center;
 	font-size: 100px;
 	margin: 30px 100px;
-	color: #CCEEF8;
+	
 }
 
 $SCREEN p {
 	text-align: center;
 	margin: 50px 100px;
+	margin-right: auto;
+	margin-left: auto;
 	font-size: 40px;
+	width: 1600px;
 }
 
 $SCREEN .signContainer {
