--- a/client/www/screens/distro/start/start.css
+++ b/client/www/screens/distro/start/start.css
@@ -1,9 +1,11 @@
 $SCREEN {
-	background-color: #225378;
+	color: white;
+	background-color: #74C93E;
 	padding: 20px;
 }
 
 $SCREEN p {
+	color: black;
 	font-size: 34px;
 	text-align: center;
 }
@@ -25,7 +27,7 @@ $SCREEN .floater {
 	box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.2); */
 	
 	/* border: solid 14px rgb(33, 133, 197); */
-	background-color: #F3FFE2;	
+	/*background-color: #8F8F8F;*/	
 	z-index: 10;
 }
 
@@ -38,17 +40,19 @@ $SCREEN .bottomBar {
 	z-index: 0;
 	
 	height: 460px;
-	background-color: #1695A3;
+	background-color: #90DE68;
 }
 
 $SCREEN .continue {
-	width: 200px;
+	width: 192px;
 	padding: 35px;
 	margin-left: auto;
 	color: white !important;
 	margin-right: auto;
-	margin-top: 16px;
-	background-color: #1695A3;
+	margin-top: 0px;
+	background-color: #545454;
+	border: 4px solid #727272;
+	border-radius: 4px;
 	font-family: $BOLD;
 	font-size: 34px;
 	text-align: center;
