Add order loading to list page.

--- a/client/www/screens/distro/list/list.css
+++ b/client/www/screens/distro/list/list.css
@@ -21,6 +21,10 @@ $SCREEN .studentList {
 	background-color: white;
 }
 
+$SCREEN .whenSelected {
+	display: none;
+}
+
 $SCREEN .studentName {
 	font-family: $BOLD;
 	font-size: 64px;
