--- a/client/www/screens/distro/list/list.css
+++ b/client/www/screens/distro/list/list.css
@@ -34,8 +34,9 @@ $SCREEN .studentName {
 
 $SCREEN .sigPreview {
 	width: 738px;
-	height: 460px;
+	height: 367px;
 	background-image: url("$ASSETS/test-sig.png");
+	background-position: 50% 50%;
 	
 	margin-left: auto;
 	margin-right: auto;
