Get rid of "NOT YET SIGNED".

--- a/client/www/screens/distro/list/list.css
+++ b/client/www/screens/distro/list/list.css
@@ -45,7 +45,8 @@ $SCREEN .sigPreview {
 }
 
 $SCREEN .notSigned .sigPreview {
-	background-image: url("$ASSETS/not-collected.png") !important;
+	/* background-image: url("$ASSETS/not-collected.png") !important; */
+	display: none;
 }
 
 $SCREEN .stats {
