--- a/client/www/screens/distro/sign/sign.css
+++ b/client/www/screens/distro/sign/sign.css
@@ -9,7 +9,7 @@ $SCREEN h1 {
 	text-align: center;
 	font-size: 100px;
 	margin: 30px 100px;
-	
+	margin-bottom: 50px;
 }
 
 $SCREEN p {
@@ -24,7 +24,7 @@ $SCREEN p {
 $SCREEN .signContainer {
 	margin-left: auto;
 	margin-right: auto;
-	
+	margin-top: 30px;
 	width: 1600px;
 }
 
