--- a/client/www/screens/distro/list/list.css
+++ b/client/www/screens/distro/list/list.css
@@ -57,13 +57,19 @@ $SCREEN .stats {
 
 $SCREEN .studentList .students li {
 	padding: 16px;
+	padding-left: 66px;
 	border-bottom: solid 2px #929292;
 	font-family: $NORMAL;
 	font-size: 44px;
-	padding-left: 84px;
+
 	background-image: url("$ASSETS/notPicked.png");
 	background-position: 16px 50%;
 	background-repeat: no-repeat;
+}
+
+$SCREEN .studentList .students li .checked {
+	padding-left: 68px;
+	background-image: url("$ASSETS/check.png");
 }
 
 $SCREEN .studentList .students li.selected {
