--- a/client/www/screens/distro/start/start.css
+++ b/client/www/screens/distro/start/start.css
@@ -58,13 +58,21 @@ $SCREEN .continue {
 	text-align: center;
 }
 
+$SCREEN .buttonHolder {
+	margin-left: auto;
+	margin-right: 50px;
+	margin-top: 1200px;
+}
+
+$SCREEN .buttonHolder div {
+	float: right;
+	margin-right: 40px;
+}
+
 $SCREEN .toggle {
 	width: 240px;
 	padding: 35px;
-	margin-left: auto;
 	color: white !important;
-	margin-right: 100px;
-	margin-top: 1200px;
 	background-color: #D95B1F;
 	border: 4px solid #F1793F;
 	border-radius: 4px;
@@ -74,12 +82,9 @@ $SCREEN .toggle {
 }
 
 $SCREEN .toggleCam {
-	width: 240px;
+	width: 280px;
 	padding: 35px;
-	margin-left: auto;
 	color: white !important;
-	margin-right: 400px;
-	margin-top: 1200px;
 	background-color: #D95B1F;
 	border: 4px solid #F1793F;
 	border-radius: 4px;
